修改包名称

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ewtm/paper-common-h5",
+  "name": "cquestion-h5",
   "version": "0.1.0",
   "description": "H5 component library of mobile devices",
   "author": "ewtgly123",
